# multicam

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.rpi  README.md  client.py  cross-compile-setup.sh  deploy  docker-build.sh  main.cpp  pi-toolchain.cmake  samba.md  server.py  test-buttons.py
build-arm/: CMakeCache.txt
client/: startup.py
qlib/: const.py  file.py  led.py
server/: startup.py
test/: button_test  button_test.cpp  button_test_2
utils/: camera_interface.cpp  camera_interface.hpp  camera_manager.cpp  camera_manager.hpp  frame_buffer_display.hpp  gpio_button.cpp  gpio_button.hpp  list_cameras.cpp  list_cameras.hpp
